--- a/src/index.ejs
+++ b/src/index.ejs
@@ -47,6 +47,7 @@
       "imports": {
         "@built/root-config": "//localhost:9000/built-root-config.js",
         "@built/loan-application": "//localhost:9001/built-loan-application.js",
+        "@built/success": "//localhost:9002/built-success.js",
         "react" : "https://cdn.jsdelivr.net/npm/react@17.0.1/umd/react.production.min.js",
         "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@17.0.1/umd/react-dom.production.min.js"
       }
